[Sema] Adjusments from review in SR-13239 and for variadic closure case